tests/errors/inexact-guard.expect
---STDERR---
error: Ports used in guards must have exact guarantees
  ┌─ tests/errors/inexact-guard.fil:7:9
  │
7 │   out = sel ? left;
  │         ^^^ Port provides guarantee @[G, G+1].

